Begin migration node 4.3

--- a/.jshintrc
+++ b/.jshintrc
@@ -2,6 +2,7 @@
   "node": true,
   "laxbreak": true,
   "laxcomma": true,
+  "esnext": true,
   "globals"   : {
     "describe"   : false,
     "it"         : false,
