--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "3.4.0",
     "commander": "2.9.0",
     "file": "0.2.2",
+    "inquirer": "1.0.3",
     "lodash": "4.13.1",
     "ncp": "2.0.0"
   },
