--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "inquirer": "1.0.3",
     "lodash": "4.13.1",
     "mkdirp": "0.5.1",
-    "ncp": "2.0.0"
+    "ncp": "2.0.0",
+    "pretty-error": "2.0.0"
   },
   "devDependencies": {
     "mocha": "2.5.3"
